--- a/.github/workflows/continuous-deployment.yaml
+++ b/.github/workflows/continuous-deployment.yaml
@@ -46,7 +46,7 @@ jobs:
           bb: latest
 
       - name: Lint
-        run: clojure -M:clj-kondo --lint src test
+        run: clojure -M:clj-kondo --lint src
 
   publish:
     name: Publish
